--- a/style.css
+++ b/style.css
@@ -306,3 +306,17 @@ body{
 }
 /*#endregion*/
 
+#voltar {
+    display: grid;
+    place-items: center;
+    position: fixed;
+    left: 15px;
+    bottom: 20px;
+    width: 50px;
+    height: 50px;
+    border: 4px solid #000;
+    border-radius: 50px;
+    background: none;
+    font-size: 30px;
+    cursor: pointer;
+}
